--- a/codigo/public/modulos/Eduardo/index.html
+++ b/codigo/public/modulos/Eduardo/index.html
@@ -1,11 +1,96 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Digitalize</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+
+    <style>
+      body {
+        background-color: #f8f9fa;
+        color: #212529;
+      }
+
+      .cover {
+        height: 100vh;
+        background-color: #e9ecef;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+      }
+
+      .navbar-brand img {
+        border-radius: 50%;
+      }
+
+      /* Evita que o conteúdo fique oculto atrás do header fixo, se necessário */
+      body {
+        padding-top: 80px;
+      }
+    </style>
+  </head>
+  <body>
+    <!-- Header elegante com logo -->
+    <nav
+      class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top py-3"
+    >
+      <div class="container">
+        <!-- LOGO -->
+        <a class="navbar-brand d-flex align-items-center" href="#">
+          <img src="logo2.png" alt="Logo" width="50" height="50" class="me-2" />
+          <strong>Digitalize</strong>
+        </a>
+
+        <!-- Botão de menu colapsável (mobile) -->
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarConteudo"
+          aria-controls="navbarConteudo"
+          aria-expanded="false"
+          aria-label="Alternar navegação"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Menu -->
+        <div class="collapse navbar-collapse" id="navbarConteudo">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Início</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#sobre">Sobre</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Serviços</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contato</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!-- Cover claro -->
+    <section class="cover">
+      <div class="container">
+        <h1 class="display-4 fw-bold">Bem-vindo ao Digitalize</h1>
+        <p class="lead">Soluções criativas para seus projetos digitais</p>
+        <a href="#sobre" class="btn btn-primary btn-lg mt-3">Saiba Mais</a>
+      </div>
+    </section>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
