--- a/codigo/public/modulos/Eduardo/index.html
+++ b/codigo/public/modulos/Eduardo/index.html
@@ -2,95 +2,337 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <title>Digitalize</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
+    <meta
+      name="description"
+      content="Digitalize - Transforme seus documentos em soluções digitais. Simplificamos o caminho para pequenos negócios terem maior presença online."
     />
-
-    <style>
-      body {
-        background-color: #f8f9fa;
-        color: #212529;
-      }
-
-      .cover {
-        height: 100vh;
-        background-color: #e9ecef;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-      }
-
-      .navbar-brand img {
-        border-radius: 50%;
-      }
-
-      /* Evita que o conteúdo fique oculto atrás do header fixo, se necessário */
-      body {
-        padding-top: 80px;
-      }
-    </style>
+    <meta
+      name="keywords"
+      content="marketing digital, presença online, pequenos negócios, agência digital"
+    />
+    <title>Digitalize - Transforme seu Negócio Digitalmente</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
   </head>
   <body>
-    <!-- Header elegante com logo -->
-    <nav
-      class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top py-3"
-    >
-      <div class="container">
-        <!-- LOGO -->
-        <a class="navbar-brand d-flex align-items-center" href="#">
-          <img src="logo2.png" alt="Logo" width="50" height="50" class="me-2" />
-          <strong>Digitalize</strong>
+    <!-- Header -->
+    <header class="bg-primary text-white py-3 shadow-sm sticky-top">
+      <div
+        class="container d-flex flex-wrap align-items-center justify-content-between"
+      >
+        <a
+          href="index.html"
+          class="d-flex align-items-center text-white text-decoration-none"
+        >
+          <img
+            src="img/logo.png"
+            alt="Logo Digitalize"
+            height="50"
+            class="me-2"
+          />
+          <span class="fs-4 fw-bold">Digitalize</span>
         </a>
 
-        <!-- Botão de menu colapsável (mobile) -->
         <button
-          class="navbar-toggler"
+          class="navbar-toggler d-lg-none"
           type="button"
           data-bs-toggle="collapse"
-          data-bs-target="#navbarConteudo"
-          aria-controls="navbarConteudo"
-          aria-expanded="false"
-          aria-label="Alternar navegação"
+          data-bs-target="#navbarNav"
         >
-          <span class="navbar-toggler-icon"></span>
+          <i class="fas fa-bars text-white"></i>
         </button>
 
-        <!-- Menu -->
-        <div class="collapse navbar-collapse" id="navbarConteudo">
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <nav class="collapse navbar-collapse" id="navbarNav">
+          <ul class="nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" href="#">Início</a>
+              <a class="nav-link text-white" href="sobre.html">Sobre Nós</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#sobre">Sobre</a>
+              <a class="nav-link text-white" href="servicos.html">Serviços</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Serviços</a>
+              <a class="nav-link text-white" href="contato.html"
+                >Fale Conosco</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contato</a>
+              <a class="nav-link text-white" href="login.html">Login</a>
             </li>
           </ul>
-        </div>
+        </nav>
       </div>
-    </nav>
+    </header>
 
-    <!-- Cover claro -->
-    <section class="cover">
-      <div class="container">
-        <h1 class="display-4 fw-bold">Bem-vindo ao Digitalize</h1>
-        <p class="lead">Soluções criativas para seus projetos digitais</p>
-        <a href="#sobre" class="btn btn-primary btn-lg mt-3">Saiba Mais</a>
+    <!-- Hero Section -->
+    <section class="hero d-flex align-items-center text-white">
+      <div class="container text-center">
+        <h1 class="display-3 fw-bold animate__animated animate__fadeInDown">
+          Transforme seu negócio com presença digital
+        </h1>
+        <p class="lead animate__animated animate__fadeIn animate__delay-1s">
+          Simplificamos o caminho para pequenos negócios terem maior
+          visibilidade online
+        </p>
+        <div class="mt-4 animate__animated animate__fadeIn animate__delay-2s">
+          <a
+            href="servicos.html"
+            class="btn btn-light btn-lg px-5 py-3 me-3 rounded-pill shadow"
+          >
+            Nossos Serviços <i class="fas fa-arrow-right ms-2"></i>
+          </a>
+          <a
+            href="contato.html"
+            class="btn btn-outline-light btn-lg px-5 py-3 rounded-pill shadow"
+          >
+            Fale Conosco
+          </a>
+        </div>
       </div>
     </section>
 
-    <!-- Bootstrap JS -->
+    <!-- Serviços Destaque -->
+    <section class="py-5 bg-light">
+      <div class="container">
+        <div class="text-center mb-5">
+          <h2 class="section-title">Como Podemos Ajudar Seu Negócio</h2>
+          <p class="text-muted">
+            Soluções personalizadas para impulsionar suas vendas
+          </p>
+        </div>
+
+        <div class="row g-4">
+          <div class="col-md-4">
+            <div class="card h-100 border-0 shadow-sm hover-effect">
+              <div class="card-body text-center p-4">
+                <div class="icon-box bg-primary-light mb-4">
+                  <i class="fas fa-globe text-primary"></i>
+                </div>
+                <h3 class="h5">Sites Profissionais</h3>
+                <p class="text-muted">
+                  Criamos sites modernos e responsivos que convertem visitantes
+                  em clientes.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="card h-100 border-0 shadow-sm hover-effect">
+              <div class="card-body text-center p-4">
+                <div class="icon-box bg-primary-light mb-4">
+                  <i class="fas fa-chart-line text-primary"></i>
+                </div>
+                <h3 class="h5">Marketing Digital</h3>
+                <p class="text-muted">
+                  Estratégias personalizadas para aumentar sua visibilidade
+                  online.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="card h-100 border-0 shadow-sm hover-effect">
+              <div class="card-body text-center p-4">
+                <div class="icon-box bg-primary-light mb-4">
+                  <i class="fas fa-store text-primary"></i>
+                </div>
+                <h3 class="h5">E-commerce</h3>
+                <p class="text-muted">
+                  Lojas virtuais completas para vender seus produtos 24/7.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Depoimentos -->
+    <section class="py-5 bg-white">
+      <div class="container">
+        <div class="text-center mb-5">
+          <h2 class="section-title">O Que Nossos Clientes Dizem</h2>
+          <p class="text-muted">Resultados reais para negócios reais</p>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-8 mx-auto">
+            <div
+              id="testimonialsCarousel"
+              class="carousel slide"
+              data-bs-ride="carousel"
+            >
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <div class="testimonial-card text-center p-4">
+                    <img
+                      src="img/client1.jpg"
+                      alt="Cliente"
+                      class="rounded-circle mb-3"
+                      width="80"
+                    />
+                    <p class="mb-3">
+                      "A Digitalize transformou nosso pequeno negócio. Em 3
+                      meses nossas vendas online aumentaram 150%!"
+                    </p>
+                    <h5 class="mb-1">Ana Silva</h5>
+                    <p class="text-muted small">Loja de Artesanato</p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="testimonial-card text-center p-4">
+                    <img
+                      src="img/client2.jpg"
+                      alt="Cliente"
+                      class="rounded-circle mb-3"
+                      width="80"
+                    />
+                    <p class="mb-3">
+                      "Finalmente encontrei uma agência que entende as
+                      necessidades de pequenos negócios. Recomendo!"
+                    </p>
+                    <h5 class="mb-1">Carlos Mendes</h5>
+                    <p class="text-muted small">Restaurante Familiar</p>
+                  </div>
+                </div>
+              </div>
+              <button
+                class="carousel-control-prev"
+                type="button"
+                data-bs-target="#testimonialsCarousel"
+                data-bs-slide="prev"
+              >
+                <span
+                  class="carousel-control-prev-icon"
+                  aria-hidden="true"
+                ></span>
+              </button>
+              <button
+                class="carousel-control-next"
+                type="button"
+                data-bs-target="#testimonialsCarousel"
+                data-bs-slide="next"
+              >
+                <span
+                  class="carousel-control-next-icon"
+                  aria-hidden="true"
+                ></span>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- CTA Final -->
+    <section class="py-5 bg-primary text-white">
+      <div class="container text-center">
+        <h2 class="mb-4">Pronto para Transformar Seu Negócio?</h2>
+        <p class="lead mb-4">Comece sua jornada digital hoje mesmo</p>
+        <a
+          href="contato.html"
+          class="btn btn-light btn-lg px-5 py-3 rounded-pill shadow"
+        >
+          Fale Conosco <i class="fas fa-paper-plane ms-2"></i>
+        </a>
+      </div>
+    </section>
+
+    <!-- Rodapé -->
+    <footer class="bg-dark text-white py-4">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4 mb-4 mb-lg-0">
+            <h5 class="mb-3">Digitalize</h5>
+            <p>
+              Simplificamos o caminho para pequenos negócios terem maior
+              presença online e alcançarem mais clientes.
+            </p>
+            <div class="social-icons mt-3">
+              <a href="#" class="text-white me-3"
+                ><i class="fab fa-facebook-f"></i
+              ></a>
+              <a href="#" class="text-white me-3"
+                ><i class="fab fa-instagram"></i
+              ></a>
+              <a href="#" class="text-white me-3"
+                ><i class="fab fa-linkedin-in"></i
+              ></a>
+              <a href="#" class="text-white"><i class="fab fa-whatsapp"></i></a>
+            </div>
+          </div>
+          <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
+            <h5 class="mb-3">Links</h5>
+            <ul class="list-unstyled">
+              <li class="mb-2">
+                <a href="index.html" class="text-white">Início</a>
+              </li>
+              <li class="mb-2">
+                <a href="sobre.html" class="text-white">Sobre Nós</a>
+              </li>
+              <li class="mb-2">
+                <a href="servicos.html" class="text-white">Serviços</a>
+              </li>
+              <li class="mb-2">
+                <a href="contato.html" class="text-white">Contato</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <h5 class="mb-3">Contato</h5>
+            <ul class="list-unstyled">
+              <li class="mb-2">
+                <i class="fas fa-map-marker-alt me-2"></i> Av. Digital, 123
+              </li>
+              <li class="mb-2">
+                <i class="fas fa-phone me-2"></i> (11) 98765-4321
+              </li>
+              <li class="mb-2">
+                <i class="fas fa-envelope me-2"></i> contato@digitalize.com
+              </li>
+            </ul>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <h5 class="mb-3">Newsletter</h5>
+            <p>Assine para receber dicas e novidades</p>
+            <form class="mt-3">
+              <div class="input-group mb-3">
+                <input
+                  type="email"
+                  class="form-control"
+                  placeholder="Seu e-mail"
+                />
+                <button class="btn btn-light" type="submit">
+                  <i class="fas fa-paper-plane"></i>
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
+        <hr class="my-4" />
+        <div class="text-center">
+          <p class="mb-0">
+            &copy; 2025 Digitalize. Todos os direitos reservados.
+          </p>
+        </div>
+      </div>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
