Atualizacoes gerais do site
Atualizações do site.

--- a/codigo/public/modulos/Eduardo/contato.html
+++ b/codigo/public/modulos/Eduardo/contato.html
@@ -29,12 +29,7 @@
     >
       <div class="container">
         <a class="navbar-brand d-flex align-items-center" href="index.html">
-          <img
-            src="img/logo.png"
-            alt="Logo Digitalize"
-            height="40"
-            class="me-2"
-          />
+          <img src="logo2.png" alt="Logo Digitalize" height="40" class="me-2" />
           <span class="fw-bold">Digitalize</span>
         </a>
         <button
@@ -472,6 +467,6 @@
 
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
