--- a/codigo/public/modulos/Eduardo/index.html
+++ b/codigo/public/modulos/Eduardo/index.html
@@ -37,12 +37,7 @@
           href="index.html"
           class="d-flex align-items-center text-white text-decoration-none"
         >
-          <img
-            src="img/logo.png"
-            alt="Logo Digitalize"
-            height="50"
-            class="me-2"
-          />
+          <img src="logo2.png" alt="Logo Digitalize" height="50" class="me-2" />
           <span class="fs-4 fw-bold">Digitalize</span>
         </a>
 
