--- a/codigo/public/modulos/Eduardo/login.html
+++ b/codigo/public/modulos/Eduardo/login.html
@@ -14,7 +14,12 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <img src="img/logo.png" alt="Logo" />Digitalize
+          <img
+            src="logo2.png"
+            alt="Logo Digitalize"
+            height="50"
+            class="me-2"
+          />Digitalize
         </a>
         <button
           class="navbar-toggler"
@@ -46,7 +51,7 @@
         Entre com suas credenciais para acessar sua conta.
       </p>
 
-      <form class="mx-auto" style="max-width: 400px">
+      <form class="mx-auto" style="max-width: 400px" id="loginForm">
         <div class="mb-3">
           <label for="email" class="form-label">E-mail</label>
           <input
@@ -77,6 +82,6 @@
 
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
