--- a/codigo/public/modulos/Eduardo/servicos.html
+++ b/codigo/public/modulos/Eduardo/servicos.html
@@ -22,7 +22,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <img src="img/logo.png" alt="Logo Digitalize" /> Digitalize
+          <img src="logo2.png" alt="Logo Digitalize" height="50" class="me-2" />
+          Digitalize
         </a>
         <button
           class="navbar-toggler"
@@ -258,6 +259,6 @@
 
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
