--- a/codigo/public/modulos/Eduardo/cadastro-empresa.html
+++ b/codigo/public/modulos/Eduardo/cadastro-empresa.html
@@ -32,6 +32,10 @@
         width: 20px;
         text-align: center;
       }
+      .required-field::after {
+        content: " *";
+        color: red;
+      }
     </style>
   </head>
   <body>
@@ -42,7 +46,7 @@
           <div class="position-sticky pt-3">
             <div class="text-center mb-4">
               <img src="logo2.png" alt="Logo Digitalize" height="50" />
-              <h5 class="text-white mt-2">Digitalize Admin</h5>
+              <h5 class="text-white mt-2">Digitalize Cadastro</h5>
             </div>
             <ul class="nav flex-column">
               <li class="nav-item">
@@ -88,8 +92,145 @@
                   </p>
 
                   <form id="empresaForm">
-                    <!-- Restante do formulário permanece igual -->
-                    <!-- ... -->
+                    <div class="row g-3">
+                      <div class="col-md-6">
+                        <label
+                          for="razaoSocial"
+                          class="form-label required-field"
+                          >Razão Social</label
+                        >
+                        <input
+                          type="text"
+                          class="form-control"
+                          id="razaoSocial"
+                          required
+                        />
+                      </div>
+                      <div class="col-md-6">
+                        <label
+                          for="nomeFantasia"
+                          class="form-label required-field"
+                          >Nome Fantasia</label
+                        >
+                        <input
+                          type="text"
+                          class="form-control"
+                          id="nomeFantasia"
+                          required
+                        />
+                      </div>
+                      <div class="col-md-6">
+                        <label for="cnpj" class="form-label required-field"
+                          >CNPJ</label
+                        >
+                        <input
+                          type="text"
+                          class="form-control"
+                          id="cnpj"
+                          required
+                        />
+                      </div>
+                      <div class="col-md-6">
+                        <label for="segmento" class="form-label required-field"
+                          >Segmento</label
+                        >
+                        <select class="form-select" id="segmento" required>
+                          <option value="">Selecione...</option>
+                          <option value="tecnologia">Tecnologia</option>
+                          <option value="varejo">Varejo</option>
+                          <option value="servicos">Serviços</option>
+                          <option value="industria">Indústria</option>
+                          <option value="alimentos">Alimentos</option>
+                          <option value="construcao">Construção</option>
+                          <option value="outros">Outros</option>
+                        </select>
+                      </div>
+                      <div class="col-md-6">
+                        <label
+                          for="responsavelNome"
+                          class="form-label required-field"
+                          >Responsável</label
+                        >
+                        <input
+                          type="text"
+                          class="form-control"
+                          id="responsavelNome"
+                          required
+                        />
+                      </div>
+                      <div class="col-md-6">
+                        <label
+                          for="responsavelCargo"
+                          class="form-label required-field"
+                          >Cargo</label
+                        >
+                        <input
+                          type="text"
+                          class="form-control"
+                          id="responsavelCargo"
+                          required
+                        />
+                      </div>
+                      <div class="col-md-6">
+                        <label
+                          for="responsavelEmail"
+                          class="form-label required-field"
+                          >E-mail</label
+                        >
+                        <input
+                          type="email"
+                          class="form-control"
+                          id="responsavelEmail"
+                          required
+                        />
+                      </div>
+                      <div class="col-md-6">
+                        <label
+                          for="responsavelTelefone"
+                          class="form-label required-field"
+                          >Telefone</label
+                        >
+                        <input
+                          type="tel"
+                          class="form-control"
+                          id="responsavelTelefone"
+                          required
+                        />
+                      </div>
+                      <div class="col-12">
+                        <label for="servicosInteresse" class="form-label"
+                          >Serviços de Interesse</label
+                        >
+                        <select
+                          class="form-select"
+                          id="servicosInteresse"
+                          multiple
+                        >
+                          <option value="site">Criação de Site</option>
+                          <option value="marketing">Marketing Digital</option>
+                          <option value="seo">SEO</option>
+                          <option value="redes">Gestão de Redes Sociais</option>
+                          <option value="sistema">Sistema Personalizado</option>
+                        </select>
+                      </div>
+                      <div class="col-12">
+                        <label for="observacoes" class="form-label"
+                          >Observações</label
+                        >
+                        <textarea
+                          class="form-control"
+                          id="observacoes"
+                          rows="3"
+                        ></textarea>
+                      </div>
+                    </div>
+                    <div
+                      class="d-grid gap-2 d-md-flex justify-content-md-end mt-4"
+                    >
+                      <button type="submit" class="btn btn-primary px-4">
+                        Enviar Cadastro
+                      </button>
+                    </div>
                   </form>
                 </div>
               </div>
@@ -101,19 +242,34 @@
 
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/5.0.8/jquery.inputmask.min.js"></script>
+    <script src="database.js"></script>
     <script>
       $(document).ready(function () {
-        // Máscara para CNPJ
+        // Máscaras
         $("#cnpj").inputmask("99.999.999/9999-99");
-
-        // Máscara para telefone
         $("#responsavelTelefone").inputmask("(99) 99999-9999");
 
         // Validação do formulário
         $("#empresaForm").submit(function (e) {
           e.preventDefault();
 
-          // Simulação de envio
+          const empresa = {
+            razaoSocial: $("#razaoSocial").val(),
+            nomeFantasia: $("#nomeFantasia").val(),
+            cnpj: $("#cnpj").val(),
+            segmento: $("#segmento").val(),
+            responsavelNome: $("#responsavelNome").val(),
+            responsavelCargo: $("#responsavelCargo").val(),
+            responsavelEmail: $("#responsavelEmail").val(),
+            responsavelTelefone: $("#responsavelTelefone").val(),
+            servicosInteresse: $("#servicosInteresse").val() || [],
+            observacoes: $("#observacoes").val(),
+          };
+
+          // Salva no banco de dados
+          empresasDB.addEmpresa(empresa);
+
           alert(
             "Cadastro enviado com sucesso! Nossa equipe entrará em contato para confirmar seu cadastro."
           );
