Rafael - Cadastro de Empresas

--- a/codigo/public/modulos/Eduardo/cadastro-empresa.html
+++ b/codigo/public/modulos/Eduardo/cadastro-empresa.html
@@ -135,14 +135,27 @@
                           >Segmento</label
                         >
                         <select class="form-select" id="segmento" required>
-                          <option value="">Selecione...</option>
-                          <option value="tecnologia">Tecnologia</option>
-                          <option value="varejo">Varejo</option>
-                          <option value="servicos">Serviços</option>
-                          <option value="industria">Indústria</option>
-                          <option value="alimentos">Alimentos</option>
-                          <option value="construcao">Construção</option>
-                          <option value="outros">Outros</option>
+                          <option value="">-- Selecione --</option>
+                          <option value="Alimentício">Alimentício</option>
+                          <option value="Automotivo">Automotivo</option>      
+                          <option value="Construção Civil">Construção Civil</option>
+                          <option value="Consultoria">Consultoria</option>
+                          <option value="E-commerce">E-commerce</option>
+                          <option value="Educação">Educação</option>
+                          <option value="Energia">Energia</option>
+                          <option value="Entretenimento">Entretenimento</option>
+                          <option value="Financeiro">Financeiro</option>
+                          <option value="Gastronomia">Gastronomia</option>
+                          <option value="Hotelaria">Hotelaria</option>
+                          <option value="Indústria">Indústria</option>
+                          <option value="Logística">Logística</option>
+                          <option value="Manufatura">Manufatura</option> 
+                          <option value="Marketing">Marketing</option>
+                          <option value="Saúde">Saúde</option>
+                          <option value="Segurança">Segurança</option>
+                          <option value="Serviços">Serviços</option>
+                          <option value="Tecnologia">Tecnologia</option>
+                          <option value="Outros">Outros</option>
                         </select>
                       </div>
                       <div class="col-md-6">
