--- a/codigo/public/modulos/Eduardo/public/cadastro-empresa.html
+++ b/codigo/public/modulos/Eduardo/public/cadastro-empresa.html
@@ -137,8 +137,10 @@
                         <select class="form-select" id="segmento" required>
                           <option value="">-- Selecione --</option>
                           <option value="Alimentício">Alimentício</option>
-                          <option value="Automotivo">Automotivo</option>      
-                          <option value="Construção Civil">Construção Civil</option>
+                          <option value="Automotivo">Automotivo</option>
+                          <option value="Construção Civil">
+                            Construção Civil
+                          </option>
                           <option value="Consultoria">Consultoria</option>
                           <option value="E-commerce">E-commerce</option>
                           <option value="Educação">Educação</option>
@@ -149,7 +151,7 @@
                           <option value="Hotelaria">Hotelaria</option>
                           <option value="Indústria">Indústria</option>
                           <option value="Logística">Logística</option>
-                          <option value="Manufatura">Manufatura</option> 
+                          <option value="Manufatura">Manufatura</option>
                           <option value="Marketing">Marketing</option>
                           <option value="Saúde">Saúde</option>
                           <option value="Segurança">Segurança</option>
@@ -256,7 +258,6 @@
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/5.0.8/jquery.inputmask.min.js"></script>
-    <script src="database.js"></script>
     <script>
       $(document).ready(function () {
         // Máscaras
@@ -264,7 +265,7 @@
         $("#responsavelTelefone").inputmask("(99) 99999-9999");
 
         // Validação do formulário
-        $("#empresaForm").submit(function (e) {
+        $("#empresaForm").submit(async function (e) {
           e.preventDefault();
 
           const empresa = {
@@ -278,15 +279,27 @@
             responsavelTelefone: $("#responsavelTelefone").val(),
             servicosInteresse: $("#servicosInteresse").val() || [],
             observacoes: $("#observacoes").val(),
+            status: "pendente",
+            dataCadastro: new Date().toISOString(),
           };
 
-          // Salva no banco de dados
-          empresasDB.addEmpresa(empresa);
+          try {
+            const response = await fetch("/api/empresas", {
+              method: "POST",
+              headers: {
+                "Content-Type": "application/json",
+              },
+              body: JSON.stringify(empresa),
+            });
 
-          alert(
-            "Cadastro enviado com sucesso! Nossa equipe entrará em contato para confirmar seu cadastro."
-          );
-          $(this).trigger("reset");
+            if (!response.ok) throw new Error("Erro ao enviar cadastro");
+
+            alert("Cadastro enviado com sucesso! Redirecionando...");
+            window.location.href = "empresas.html";
+          } catch (error) {
+            console.error("Erro:", error);
+            alert("Erro ao enviar cadastro. Por favor, tente novamente.");
+          }
         });
       });
     </script>
