--- a/codigo/public/modulos/Eduardo/public/empresas.html
+++ b/codigo/public/modulos/Eduardo/public/empresas.html
@@ -83,11 +83,11 @@
               </button>
             </div>
             <button
-              type="button"
-              class="btn btn-sm btn-primary"
+              href="cadastro-empresa.html"
               id="btnNovaEmpresa"
+              class="btn btn-primary"
             >
-              <i class="fas fa-plus me-1"></i> Nova Empresa
+              <i class="fas fa-plus"></i> Nova Empresa
             </button>
           </div>
         </div>
@@ -140,89 +140,28 @@
         <div class="card">
           <div class="card-body">
             <div class="table-responsive">
-              <table class="table table-hover" id="empresasTable">
+              <table class="table">
                 <thead>
                   <tr>
                     <th>ID</th>
-                    <th>Empresa</th>
+                    <th>Nome Fantasia</th>
                     <th>CNPJ</th>
-                    <th>Responsável</th>
-                    <th>Segmento</th>
-                    <th>Data Cadastro</th>
                     <th>Status</th>
-                    <th>Ações</th>
                   </tr>
                 </thead>
-                <tbody>
+                <tbody id="empresas-table">
                   <!-- Dados serão carregados via JavaScript -->
                 </tbody>
               </table>
             </div>
-
-            <!-- Paginação -->
-            <nav aria-label="Page navigation" class="mt-3">
-              <ul class="pagination justify-content-center">
-                <li class="page-item disabled">
-                  <a class="page-link" href="#" tabindex="-1">Anterior</a>
-                </li>
-                <li class="page-item active">
-                  <a class="page-link" href="#">1</a>
-                </li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item">
-                  <a class="page-link" href="#">Próxima</a>
-                </li>
-              </ul>
-            </nav>
           </div>
         </div>
       </main>
     </div>
 
-    <!-- Modal de Detalhes -->
-    <div
-      class="modal fade"
-      id="detalhesEmpresa"
-      tabindex="-1"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title">Detalhes da Empresa</h5>
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="modal-body" id="modalDetalhesBody">
-            <!-- Conteúdo será carregado via JavaScript -->
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-success" id="btnAprovarModal">
-              <i class="fas fa-check me-1"></i> Aprovar
-            </button>
-            <button type="button" class="btn btn-danger" id="btnRejeitarModal">
-              <i class="fas fa-times me-1"></i> Rejeitar
-            </button>
-            <button
-              type="button"
-              class="btn btn-secondary"
-              data-bs-dismiss="modal"
-            >
-              Fechar
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="database.js"></script>
+    <script src="empresas-crud.js"></script>
     <script src="empresas.js"></script>
   </body>
 </html>
