--- a/codigo/public/modulos/Larissa/public/index.html
+++ b/codigo/public/modulos/Larissa/public/index.html
@@ -26,10 +26,17 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="empresa_lista.html">
+          <a class="nav-link active" href="index.html">
             <i class="fas fa-building"></i>
             Empresas
             <span class="badge bg-primary rounded-pill ms-1" id="totalEmpresas">0</span>
+          </a>
+        </li>
+                <li class="nav-item">
+          <a class="nav-link" href="favoritos.html">
+            <i class="fas fa-heart"></i>
+            Favoritos
+            <span class="badge bg-primary rounded-pill ms-1" id="totalFavoritos">0</span>
           </a>
         </li>
         <li class="nav-item">
@@ -45,6 +52,7 @@
             Usuários
           </a>
         </li>
+
         <li class="nav-item">
           <a class="nav-link" href="#configuracoes">
             <i class="fas fa-cog"></i>
